hw10/y.output
Terminals which are not used

   LABEL
   GOTO


State 57 conflicts: 1 shift/reduce


Grammar

    0 $accept: lines $end

    1 lines: lines stmt '\n'
    2      | lines error '\n'
    3      | /* empty */

    4 stmt: IF '(' expr ')' stmt
    5     | IF '(' expr ')' stmt ELSE stmt
    6     | identifier '=' expr ';'
    7     | identifier '[' expr ']' '=' expr ';'
    8     | type identifier ';'
    9     | type identifier '[' constant ']' ';'

   10 type: CHAR
   11     | SHORT
   12     | INT
   13     | LONG

   14 expr: expr '+' expr
   15     | expr '-' expr
   16     | expr '*' expr
   17     | expr '/' expr
   18     | expr '|' expr
   19     | expr '^' expr
   20     | expr '&' expr
   21     | expr '%' expr
   22     | '(' expr ')'
   23     | '~' expr
   24     | '-' expr
   25     | '+' expr
   26     | constant
   27     | identifier
   28     | identifier '[' expr ']'

   29 constant: CONSTANT

   30 identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2
'%' (37) 21
'&' (38) 20
'(' (40) 4 5 22
')' (41) 4 5 22
'*' (42) 16
'+' (43) 14 25
'-' (45) 15 24
'/' (47) 17
';' (59) 6 7 8 9
'=' (61) 6 7
'[' (91) 7 9 28
']' (93) 7 9 28
'^' (94) 19
'|' (124) 18
'~' (126) 23
error (256) 2
IDENTIFIER (258) 30
CONSTANT (259) 29
IF (260) 4 5
ELSE (261) 5
LABEL (262)
GOTO (263)
CHAR (264) 10
SHORT (265) 11
INT (266) 12
LONG (267) 13
UPLUS (268)
UMINUS (269)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
lines (32)
    on left: 1 2 3, on right: 0 1 2
stmt (33)
    on left: 4 5 6 7 8 9, on right: 1 4 5
type (34)
    on left: 10 11 12 13, on right: 8 9
expr (35)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28,
    on right: 4 5 6 7 14 15 16 17 18 19 20 21 22 23 24 25 28
constant (36)
    on left: 29, on right: 9 26
identifier (37)
    on left: 30, on right: 6 7 8 9 27 28


state 0

    0 $accept: . lines $end

    $default  reduce using rule 3 (lines)

    lines  go to state 1


state 1

    0 $accept: lines . $end
    1 lines: lines . stmt '\n'
    2      | lines . error '\n'

    $end        shift, and go to state 2
    error       shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    IF          shift, and go to state 5
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9

    stmt        go to state 10
    type        go to state 11
    identifier  go to state 12


state 2

    0 $accept: lines $end .

    $default  accept


state 3

    2 lines: lines error . '\n'

    '\n'  shift, and go to state 13


state 4

   30 identifier: IDENTIFIER .

    $default  reduce using rule 30 (identifier)


state 5

    4 stmt: IF . '(' expr ')' stmt
    5     | IF . '(' expr ')' stmt ELSE stmt

    '('  shift, and go to state 14


state 6

   10 type: CHAR .

    $default  reduce using rule 10 (type)


state 7

   11 type: SHORT .

    $default  reduce using rule 11 (type)


state 8

   12 type: INT .

    $default  reduce using rule 12 (type)


state 9

   13 type: LONG .

    $default  reduce using rule 13 (type)


state 10

    1 lines: lines stmt . '\n'

    '\n'  shift, and go to state 15


state 11

    8 stmt: type . identifier ';'
    9     | type . identifier '[' constant ']' ';'

    IDENTIFIER  shift, and go to state 4

    identifier  go to state 16


state 12

    6 stmt: identifier . '=' expr ';'
    7     | identifier . '[' expr ']' '=' expr ';'

    '='  shift, and go to state 17
    '['  shift, and go to state 18


state 13

    2 lines: lines error '\n' .

    $default  reduce using rule 2 (lines)


state 14

    4 stmt: IF '(' . expr ')' stmt
    5     | IF '(' . expr ')' stmt ELSE stmt

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 24
    constant    go to state 25
    identifier  go to state 26


state 15

    1 lines: lines stmt '\n' .

    $default  reduce using rule 1 (lines)


state 16

    8 stmt: type identifier . ';'
    9     | type identifier . '[' constant ']' ';'

    ';'  shift, and go to state 27
    '['  shift, and go to state 28


state 17

    6 stmt: identifier '=' . expr ';'

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 29
    constant    go to state 25
    identifier  go to state 26


state 18

    7 stmt: identifier '[' . expr ']' '=' expr ';'

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 30
    constant    go to state 25
    identifier  go to state 26


state 19

   29 constant: CONSTANT .

    $default  reduce using rule 29 (constant)


state 20

   25 expr: '+' . expr

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 31
    constant    go to state 25
    identifier  go to state 26


state 21

   24 expr: '-' . expr

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 32
    constant    go to state 25
    identifier  go to state 26


state 22

   23 expr: '~' . expr

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 33
    constant    go to state 25
    identifier  go to state 26


state 23

   22 expr: '(' . expr ')'

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 34
    constant    go to state 25
    identifier  go to state 26


state 24

    4 stmt: IF '(' expr . ')' stmt
    5     | IF '(' expr . ')' stmt ELSE stmt
   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr

    '|'  shift, and go to state 35
    '^'  shift, and go to state 36
    '&'  shift, and go to state 37
    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42
    ')'  shift, and go to state 43


state 25

   26 expr: constant .

    $default  reduce using rule 26 (expr)


state 26

   27 expr: identifier .
   28     | identifier . '[' expr ']'

    '['  shift, and go to state 44

    $default  reduce using rule 27 (expr)


state 27

    8 stmt: type identifier ';' .

    $default  reduce using rule 8 (stmt)


state 28

    9 stmt: type identifier '[' . constant ']' ';'

    CONSTANT  shift, and go to state 19

    constant  go to state 45


state 29

    6 stmt: identifier '=' expr . ';'
   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr

    '|'  shift, and go to state 35
    '^'  shift, and go to state 36
    '&'  shift, and go to state 37
    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42
    ';'  shift, and go to state 46


state 30

    7 stmt: identifier '[' expr . ']' '=' expr ';'
   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr

    '|'  shift, and go to state 35
    '^'  shift, and go to state 36
    '&'  shift, and go to state 37
    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42
    ']'  shift, and go to state 47


state 31

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   25     | '+' expr .

    $default  reduce using rule 25 (expr)


state 32

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   24     | '-' expr .

    $default  reduce using rule 24 (expr)


state 33

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   23     | '~' expr .

    $default  reduce using rule 23 (expr)


state 34

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | '(' expr . ')'

    '|'  shift, and go to state 35
    '^'  shift, and go to state 36
    '&'  shift, and go to state 37
    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42
    ')'  shift, and go to state 48


state 35

   18 expr: expr '|' . expr

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 49
    constant    go to state 25
    identifier  go to state 26


state 36

   19 expr: expr '^' . expr

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 50
    constant    go to state 25
    identifier  go to state 26


state 37

   20 expr: expr '&' . expr

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 51
    constant    go to state 25
    identifier  go to state 26


state 38

   14 expr: expr '+' . expr

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 52
    constant    go to state 25
    identifier  go to state 26


state 39

   15 expr: expr '-' . expr

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 53
    constant    go to state 25
    identifier  go to state 26


state 40

   16 expr: expr '*' . expr

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 54
    constant    go to state 25
    identifier  go to state 26


state 41

   17 expr: expr '/' . expr

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 55
    constant    go to state 25
    identifier  go to state 26


state 42

   21 expr: expr '%' . expr

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 56
    constant    go to state 25
    identifier  go to state 26


state 43

    4 stmt: IF '(' expr ')' . stmt
    5     | IF '(' expr ')' . stmt ELSE stmt

    IDENTIFIER  shift, and go to state 4
    IF          shift, and go to state 5
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9

    stmt        go to state 57
    type        go to state 11
    identifier  go to state 12


state 44

   28 expr: identifier '[' . expr ']'

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 58
    constant    go to state 25
    identifier  go to state 26


state 45

    9 stmt: type identifier '[' constant . ']' ';'

    ']'  shift, and go to state 59


state 46

    6 stmt: identifier '=' expr ';' .

    $default  reduce using rule 6 (stmt)


state 47

    7 stmt: identifier '[' expr ']' . '=' expr ';'

    '='  shift, and go to state 60


state 48

   22 expr: '(' expr ')' .

    $default  reduce using rule 22 (expr)


state 49

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   18     | expr '|' expr .
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr

    '^'  shift, and go to state 36
    '&'  shift, and go to state 37
    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42

    $default  reduce using rule 18 (expr)


state 50

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   19     | expr '^' expr .
   20     | expr . '&' expr
   21     | expr . '%' expr

    '&'  shift, and go to state 37
    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42

    $default  reduce using rule 19 (expr)


state 51

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   20     | expr '&' expr .
   21     | expr . '%' expr

    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42

    $default  reduce using rule 20 (expr)


state 52

   14 expr: expr . '+' expr
   14     | expr '+' expr .
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr

    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42

    $default  reduce using rule 14 (expr)


state 53

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   15     | expr '-' expr .
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr

    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42

    $default  reduce using rule 15 (expr)


state 54

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   16     | expr '*' expr .
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr

    $default  reduce using rule 16 (expr)


state 55

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   17     | expr '/' expr .
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr

    $default  reduce using rule 17 (expr)


state 56

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   21     | expr '%' expr .

    $default  reduce using rule 21 (expr)


state 57

    4 stmt: IF '(' expr ')' stmt .
    5     | IF '(' expr ')' stmt . ELSE stmt

    ELSE  shift, and go to state 61

    ELSE      [reduce using rule 4 (stmt)]
    $default  reduce using rule 4 (stmt)


state 58

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   28     | identifier '[' expr . ']'

    '|'  shift, and go to state 35
    '^'  shift, and go to state 36
    '&'  shift, and go to state 37
    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42
    ']'  shift, and go to state 62


state 59

    9 stmt: type identifier '[' constant ']' . ';'

    ';'  shift, and go to state 63


state 60

    7 stmt: identifier '[' expr ']' '=' . expr ';'

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 19
    '+'         shift, and go to state 20
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr        go to state 64
    constant    go to state 25
    identifier  go to state 26


state 61

    5 stmt: IF '(' expr ')' stmt ELSE . stmt

    IDENTIFIER  shift, and go to state 4
    IF          shift, and go to state 5
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9

    stmt        go to state 65
    type        go to state 11
    identifier  go to state 12


state 62

   28 expr: identifier '[' expr ']' .

    $default  reduce using rule 28 (expr)


state 63

    9 stmt: type identifier '[' constant ']' ';' .

    $default  reduce using rule 9 (stmt)


state 64

    7 stmt: identifier '[' expr ']' '=' expr . ';'
   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr

    '|'  shift, and go to state 35
    '^'  shift, and go to state 36
    '&'  shift, and go to state 37
    '+'  shift, and go to state 38
    '-'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41
    '%'  shift, and go to state 42
    ';'  shift, and go to state 66


state 65

    5 stmt: IF '(' expr ')' stmt ELSE stmt .

    $default  reduce using rule 5 (stmt)


state 66

    7 stmt: identifier '[' expr ']' '=' expr ';' .

    $default  reduce using rule 7 (stmt)
